force-app/main/default/objects/ToastEvent__e/ToastEvent__e.object-meta.xml
<CustomObject>
    <description>This platform event is used to display platform event toast in lightning</description>
    <label>Toast Event</label>
    <pluralLabel>Toast Events</pluralLabel>
</CustomObject>