force-app/main/default/objects/ToastEvent__e/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Message to be displayed in Toast</description>
    <inlineHelpText>Message to be displayed in Toast</inlineHelpText>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>