force-app/main/default/objects/ToastEvent__e/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <description>Mode of the toast. Must be:- dismissable, pester or sticky</description>
    <inlineHelpText>Supported Values:-

dismissable
pester
sticky</inlineHelpText>
    <label>Mode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>