force-app/main/default/objects/ToastEvent__e/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Title of the Toast</description>
    <inlineHelpText>Heading / Title of the Toast</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>